--- a/styles/modules/_variables.scss
+++ b/styles/modules/_variables.scss
@@ -2,7 +2,7 @@
 $contentMaxWidth: 1440px;
 
 // 色
-$--main-primary:  #1b2f60;
+$--main-primary:  rgb(27, 47, 96);
 $--main-secondary:#f0f8ff;
 $--shadow-cBlue: #b0c4de;
 $--font-cBlack: #333;
@@ -31,4 +31,3 @@ $--font-cWhite: #fff;
 }
 
 // performance__link
-
