--- a/styles/style.css
+++ b/styles/style.css
@@ -104,6 +104,9 @@ li {
 }
 
 .bl_description {
+  font-family: sawarabi-mincho, sans-serif;
+  font-style: normal;
+  font-weight: 500;
   font-size: 1.75rem;
 }
 
