--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -1,11 +1,10 @@
 //レイアウト確認
 * {
-  outline: dashed 1px skyblue;
+  // outline: dashed 1px skyblue;
 }
 
 body {
-
-  font-family: sawarabi-mincho,"Roboto", "Noto Sans JP", sans-serif;
+  font-family: "Roboto", "Noto Sans JP", sans-serif;
   max-width: 1600px;
   text-align: justify;
   background-color: $--main-secondary;
@@ -58,17 +57,15 @@ li {
 }
 
 .bl_description {
+	font-family: sawarabi-mincho;
   font-style: normal;
   font-weight: 500;
   font-size: 1.75rem;
 }
 
 .bl_description__white {
+	font-family: sawarabi-mincho;
   font-size: 1.75rem;
-}
-
-.bl_heading{
-	font-family: "Roboto";
 }
 
 // header
@@ -96,8 +93,6 @@ li {
   justify-content: space-around;
   margin: 0;
 }
-
-
 
 .bl_headerNav {
   gap: 20px;
@@ -177,7 +172,7 @@ li {
 }
 
 .bl_hero_heading {
-	font-family: "Roboto";
+  font-family: "Roboto";
   font-size: 220px;
   line-height: 1;
 }
@@ -220,12 +215,16 @@ li {
   }
 }
 
-.bl_card_image{
-	width: 25%;
+.bl_card_image {
+  width: 25%;
 }
 
-.bl_card_textWrapper{
-	width:75%;
+.bl_card_textWrapper {
+  width: 75%;
+}
+
+.bl_card_description{
+	font-family: sawarabi-mincho;
 }
 
 // price
@@ -247,6 +246,10 @@ li {
   align-items: flex-start;
   flex-wrap: wrap;
   text-align: left;
+}
+
+.el_skills_item_txt{
+	font-family: sawarabi-mincho;
 }
 
 .bl_article {
@@ -315,40 +318,143 @@ li {
 
 // footer
 
-
 // modalTest
-.bl_work_wrapper{
-	display: flex;
+.bl_work_wrapper {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 40px;
 }
 
-.bl_work_inner{
-	width:30%;
-	height: 300px;
-	overflow: hidden;
-	padding: 30px;
-	display: flex;
-	flex-direction: column-reverse;
-	gap: 5px;
+.bl_work_inner {
+	transition: all 2s;
+  width: 30%;
+  height: 300px;
+  overflow: hidden;
+  padding: 30px;
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 5px;
+  position: relative;
+  vertical-align: middle;
+  &::before {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    // bottom: 30%;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: auto;
+    color: #fff;
+    font-size: 2em;
+    content: "more info";
+    text-align: center;
+    line-height: 200px;
+    opacity: 0;
+    transform: translateY(200px);
+		transition: .7s;
+  }
+  &:hover {
+    &::before {
+      transition: 0.7s;
+      opacity: 1;
+      transform: translateY(0);
+      cursor: pointer;
+    }
+  }
 }
 
-.bl_work{
-	// background-color: pink;
+
+
+.bl_work_title {
+  font-size: 1.5rem;
+  z-index: 100;
 }
 
-
-.bl_work_title{
-	font-size: 1.5rem;
-	z-index: 100;
-}
-
-.bl_work_img {
-overflow: hidden;
-}
-
-.hidden{
+.bl_work_desc{
 	display: none;
 }
 
+.bl_work_img {
+  overflow: hidden;
+}
+
+.bl_work_linkWrapper{
+	display: none;
+}
+
+.hidden {
+  display: none;
+}
+
 .open {
-	display: block;
+  display: block;
+}
+
+.modal{
+	transition: all 2s;
+
+	.bl_work_info{
+		color: $--main-primary;
+		width:500px;
+		margin: 0 auto;
+	}
+	.bl_work_title{
+		font-size: 4rem;
+	}
+	&.bl_work_inner{
+		z-index: 110;
+		position: absolute;
+		right: 25vw;
+		width: 50vw;
+		height: fit-content;
+		background-color: #fff;
+		flex-direction: column;
+		border-radius: 20px;
+
+		&::before{
+			display: none;
+		}
+	}
+
+
+	.bl_work_desc{
+		display: block;
+	}
+
+	.bl_work_linkWrapper{
+		display: flex;
+		gap:10px;
+		justify-content: flex-end;
+		i{
+			font-size: 60px;
+		}
+	}
+
+
+
+	.bl_work_img{
+		width: 500px;
+		margin: 50px auto;
+	}
+}
+
+.over-lay{
+	// display: none;
+	background-color:rgba(0,0,0,0.5);
+	z-index:100;
+	position: fixed;
+	top: 0;
+	left:0;
+	width: 100vw;
+	height: 100vh;
+}
+
+
+.point{
+	font-size: 12pt;
+}
+.pixel{
+	font-size: 15.96px;
 }
