--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,6 @@
 
 body {
   font-family: "Roboto", "Noto Sans JP", sans-serif;
-  max-width: 1600px;
   text-align: justify;
   background-color: #f0f8ff;
 }
@@ -343,14 +342,13 @@ li {
 }
 
 .bl_work_inner {
-  transition: all 2s;
-  width: 30%;
-  height: 300px;
-  overflow: hidden;
-  padding: 30px;
   display: flex;
   flex-direction: column-reverse;
   gap: 5px;
+  width: 30%;
+  height: 300px;
+  padding: 30px;
+  overflow: hidden;
   position: relative;
   vertical-align: middle;
 }
@@ -461,6 +459,14 @@ li {
   left: 0;
   width: 100vw;
   height: 100vh;
+}
+
+#work-heading {
+  cursor: pointer;
+}
+
+#close {
+  cursor: pointer;
 }
 
 .point {
