--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -281,6 +281,10 @@ li {
 
 //works
 
+.work-list{
+	position: relative;
+}
+
 .bl_article_pfm {
   width: 100%;
   font-size: 24px;
@@ -402,14 +406,14 @@ li {
 		margin: 0 auto;
 	}
 	.bl_work_title{
-		font-size: 4rem;
+		font-size: 2rem;
 	}
 	&.bl_work_inner{
-		z-index: 110;
+		z-index: 999;
 		position: absolute;
 		right: 25vw;
 		width: 50vw;
-		height: fit-content;
+		height: 80vh;
 		background-color: #fff;
 		flex-direction: column;
 		border-radius: 20px;
@@ -417,6 +421,10 @@ li {
 		&::before{
 			display: none;
 		}
+	}
+
+	.bl_work_img{
+		overflow: scroll;
 	}
 
 
@@ -429,7 +437,7 @@ li {
 		gap:10px;
 		justify-content: flex-end;
 		i{
-			font-size: 60px;
+			font-size: 30px;
 		}
 	}
 
