--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,8 @@ body {
   font-family: "Roboto", "Noto Sans JP", sans-serif;
   text-align: justify;
   background-color: #f0f8ff;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 figure {
@@ -304,18 +306,6 @@ li {
   position: relative;
 }
 
-.bl_article_pfm {
-  width: 100%;
-  font-size: 24px;
-}
-
-.bl_article_pfm img {
-  width: 300px;
-  height: 400px;
-  object-fit: cover;
-  object-position: top;
-}
-
 .works_imgWrapper {
   position: relative;
   margin-right: 20px;
@@ -345,11 +335,15 @@ li {
   gap: 40px;
 }
 
+.bl_work_wrapper > .bl_work {
+  position: relative;
+  width: 30%;
+}
+
 .bl_work_inner {
   display: flex;
   flex-direction: column-reverse;
   gap: 5px;
-  width: 30%;
   height: 300px;
   padding: 30px;
   overflow: hidden;
@@ -413,7 +407,7 @@ li {
 
 .modal .bl_work_info {
   color: #1b2f60;
-  width: 500px;
+  width: 400px;
   margin: 0 auto;
 }
 
@@ -421,23 +415,29 @@ li {
   font-size: 2rem;
 }
 
-.modal.bl_work_inner {
+.modal .bl_work_inner {
   z-index: 999;
   position: absolute;
-  right: 25vw;
-  width: 50vw;
+  top: 0;
+  left: 0;
+  width: 30vw;
   height: 80vh;
   background-color: #fff;
   flex-direction: column;
   border-radius: 20px;
 }
 
-.modal.bl_work_inner::before {
+.modal .bl_work_inner::before {
   display: none;
 }
 
 .modal .bl_work_img {
   overflow: scroll;
+  width: 400px;
+}
+
+.modal .btn_close {
+  display: none;
 }
 
 .modal .bl_work_desc {
@@ -475,13 +475,5 @@ li {
 
 #close {
   cursor: pointer;
-}
-
-.point {
-  font-size: 12pt;
-}
-
-.pixel {
-  font-size: 15.96px;
 }
 /*# sourceMappingURL=style.css.map */
