--- a/styles/modules/_variables.scss
+++ b/styles/modules/_variables.scss
@@ -4,6 +4,7 @@ $contentMaxWidth: 1440px;
 // 色
 $--main-primary:  rgb(27, 47, 96);
 $--main-secondary:#f0f8ff;
+$--accent-primary: #ffde59;
 $--shadow-cBlue: #b0c4de;
 $--font-cBlack: #333;
 $--font-cWhite: #fff;
