--- a/styles/style.css
+++ b/styles/style.css
@@ -108,12 +108,12 @@ li {
   font-family: sawarabi-mincho;
   font-style: normal;
   font-weight: 500;
-  font-size: 1.75rem;
+  font-size: 1.25rem;
 }
 
 .bl_description__white {
   font-family: sawarabi-mincho;
-  font-size: 1.75rem;
+  font-size: 1.25rem;
 }
 
 .ly_header {
@@ -145,6 +145,14 @@ li {
   gap: 20px;
   background-color: #f0f8ff;
   border-radius: 20px;
+  transform: scale(0);
+  transition: 2s;
+}
+
+.open {
+  transition: 3s;
+  transform: scale(1);
+  transform-origin: right;
 }
 
 .bl_headerNav_item {
@@ -209,26 +217,32 @@ li {
   position: absolute;
   top: 230px;
   right: 140px;
-  width: 200px;
+  width: 4.5vw;
   clip-path: circle();
   z-index: 9999;
 }
 
 .bl_hero_heading {
   font-family: "Roboto";
-  font-size: 220px;
+  font-size: 15vw;
   line-height: 1;
 }
 
 .char {
   display: inline-block;
-  margin-right: -65px;
+  margin-right: -4.5vw;
   transform: translateX(-300px);
 }
 
 .bl_hero_subHeading {
   font-size: 4vw;
   line-height: 1;
+}
+
+.bl_hero_phonetic {
+  font-size: 6vw;
+  line-height: 0.2;
+  margin-bottom: 50px;
 }
 
 .bl_hero_description {
@@ -262,7 +276,19 @@ li {
 
 .bl_card_description {
   font-family: sawarabi-mincho;
-  font-size: 24px;
+  font-size: 1.125rem;
+  line-height: 1.8;
+}
+
+.price-table {
+  font-family: roboto;
+}
+
+.price-table td {
+  border: 1px solid #f0f8ff;
+  padding: 20px;
+  text-align: left;
+  width: 25vw;
 }
 
 .el_heading_wrapper {
@@ -285,7 +311,7 @@ li {
 
 .el_skills_item_txt {
   font-family: sawarabi-mincho;
-  font-size: 20px;
+  font-size: 1.125rem;
 }
 
 .bl_article {
@@ -409,10 +435,6 @@ li {
   display: none;
 }
 
-.open {
-  display: block;
-}
-
 .btn_close {
   display: none;
   text-align: right;
@@ -440,7 +462,7 @@ li {
   top: 0;
   left: 0;
   width: 400px;
-  height: 800px;
+  height: 90vh;
   background-color: #fff;
   flex-direction: column;
   border-radius: 20px;
@@ -457,8 +479,7 @@ li {
 
 .modal .btn_close {
   display: block;
-  position: absolute;
-  bottom: 0;
+  margin: 0 auto;
 }
 
 .modal .bl_work_desc {
